--- a/css/rectangle/partials/book.scss
+++ b/css/rectangle/partials/book.scss
@@ -1,3 +1,12 @@
+@keyframes imageMovement {
+  from {
+    object-position: 50% 25%;
+  }
+
+  to {
+    object-position: 50% 75%;
+  }
+}
 $width: 100%;
 $height: 100%;
 $pageColor: white;
@@ -315,12 +324,12 @@ ul {
 
       &::after {
         background: white;
-        width: 98%;
-        height: 98%;
+        width: calc(100% - 2px);
+        height: calc(100% - 2px);
         position: absolute;
         top: 0;
         left: 0;
-        transform: translateZ(-1px) translateY(1%) translateX(1%);
+        transform: translateZ(-0.1px) translateY(1px) translateX(1px);
         border-radius: 0 5px 5px 0;
       }
     }
@@ -444,7 +453,7 @@ ul {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 
   & > h3 {
     @include shorttText;
@@ -473,6 +482,69 @@ ul {
     }
   }
 
+  &-content {
+    height: 97%;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+
+    &-cover {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0, 0, 0, 1);
+      transition: all 0.25s linear;
+
+      &:hover {
+        background: rgba(0, 0, 0, .35);
+      }
+    }
+
+    &-image {
+      z-index: -1;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      animation: imageMovement 10s cubic-bezier(0.25, 0.00, 0.75, 1.0) infinite alternate;
+    }
+
+    &-text {
+      position: absolute;
+      @include shorttText;
+      color: white;
+      margin: 0;
+    }
+
+    &-link {
+      cursor: pointer;
+      position: absolute;
+      right: 25px;
+      transform: translateY(23px);
+      color: white !important;
+      font-size: 0.8em;
+      transition: all .25s linear;
+      text-decoration: none !important;
+
+      &:hover {
+        text-shadow: 0 0 10px #fff, 0 0 10px #ffffff, 0 0 10px #ffffff;
+      }
+    }
+
+    &-desc {
+      flex: 4;
+      padding: 10px 0px;
+      overflow-y: auto;
+
+      & > h4 {
+        text-align: left;
+        @include shorttText;
+        margin: 0;
+        font-size: 0.875em;
+      }
+    }
+  }
+
   &-back {
     text-align: center !important;
     position: absolute;
@@ -480,5 +552,9 @@ ul {
     left: 0;
     padding: 0 !important;
     bottom: 8px;
+  }
+
+  &-toc {
+    justify-content: center !important;
   }
 }
