recover modal space, rename deep space

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,4 +9,5 @@
 @import 'partials/about.scss';
 @import 'partials/menu.scss';
 @import 'partials/book.scss';
+@import 'partials/deepspace.scss';
 @import 'partials/stars.scss';
