--- a/css/partials/mixins.scss
+++ b/css/partials/mixins.scss
@@ -146,3 +146,13 @@
     left: calc(100% + 100px);
   }
 }
+
+@include keyframes(move-twink-back) {
+  from {
+    background-position: 0 0;
+  }
+
+  to {
+    background-position: -10000px 5000px;
+  }
+}
