--- a/css/partials/mixins.scss
+++ b/css/partials/mixins.scss
@@ -123,7 +123,7 @@
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
-@include  keyframes(textColor) {
+@include keyframes(textColor) {
   0% {
     color: #7e0fff;
   }
@@ -136,7 +136,6 @@
     color: #7e0fff;
   }
 }
-
 @include keyframes(particleAnimation) {
   from {
     left: -100px;
@@ -146,7 +145,6 @@
     left: calc(100% + 100px);
   }
 }
-
 @include keyframes(move-twink-back) {
   from {
     background-position: 0 0;
@@ -154,5 +152,18 @@
 
   to {
     background-position: -10000px 5000px;
+  }
+}
+@include keyframes(saturn-hover) {
+  0% {
+    top: 40px;
+  }
+
+  50% {
+    top: 30px;
+  }
+
+  100% {
+    top: 40px;
   }
 }
