--- a/css/partials/book.scss
+++ b/css/partials/book.scss
@@ -449,6 +449,40 @@ ul {
   flex-direction: column;
   justify-content: flex-start;
 
+  &-gallery-open {
+    & > div {
+      & > .page-content-cover {
+        background: rgba(0,0,0,0.15);
+        height: calc(100% - 32px);
+        //flex: 1;
+        &:hover {
+          background: rgba(0,0,0,0.15) !important;
+        }
+
+        & > .page-content-text {
+          font-size: 1.2em;
+          width: calc(100% - 40px);
+          text-align: left;
+          padding: 2px 10px;
+          box-sizing: border-box;
+          background: rgba(1,1,1,0.25);
+          top: 23px;
+          display: none;
+        }
+
+        & > .page-content-cover-dir {
+          pointer-events: all;
+        }
+      }
+
+
+      & > .page-content-desc {
+        flex: 0;
+        margin: 0;
+      }
+    }
+  }
+
   &-toc {
     & > h3 {
       @include shorttText;
@@ -486,12 +520,13 @@ ul {
     transition: all 1s ease-in;
 
     &-cover {
-      flex: 1;
+      height: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
       background: rgba(0, 0, 0, 1);
-      transition: all 0.25s linear;
+      transition: opacity 0.25s linear, all 0.75s ease-out;
+      position: relative;
 
       &:hover {
         background: rgba(0, 0, 0, .35);
@@ -499,12 +534,13 @@ ul {
 
       &-dir {
         position: absolute;
-        top: 20px;
-        left: 20px;
-        right: 20px;
-        height: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
         display: flex;
-        transition: all 1s linear;
+        transition: all 0.75s linear;
+        pointer-events: none;
       }
 
       &-left {
@@ -514,7 +550,7 @@ ul {
 
       &-right {
         flex: 1;
-        cursor: url('/assets/suivant.cur') 530 0, pointer;
+        cursor: url("/assets/suivant.cur") 530 0, pointer;
       }
     }
 
@@ -531,7 +567,7 @@ ul {
       @include shorttText;
       color: white;
       margin: 0;
-      transition: all 1s linear;
+      transition: all 0.75s linear;
       top: initial;
     }
 
@@ -601,7 +637,7 @@ ul {
       flex: 4;
       margin: 10px 0;
       overflow-y: auto;
-      transition: all 1s ease-in-out;
+      transition: all 0.75s ease-out;
 
       & > h4 {
         text-align: left;
@@ -609,37 +645,6 @@ ul {
         margin: 0;
         font-size: 0.875em;
       }
-    }
-  }
-
-  &-gallery {
-    &-cover {
-      background: rgba(0,0,0,0.15);
-      transition: all 1s linear;
-
-      &:hover {
-        background: rgba(0,0,0,0.15) !important;
-      }
-    }
-
-    &-text {
-      font-size: 1.2em;
-      width: calc(100% - 40px);
-      text-align: left;
-      padding: 2px 10px;
-      box-sizing: border-box;
-      background: rgba(1,1,1,0.25);
-      top: 23px;
-      display: none;
-    }
-
-    &-dir {
-      height: calc(100% - 83px);
-    }
-
-    &-desc {
-      flex: 0;
-      margin: 0;
     }
   }
 
