--- a/css/partials/book.scss
+++ b/css/partials/book.scss
@@ -1,12 +1,3 @@
-@keyframes imageMovement {
-  from {
-    object-position: 50% 25%;
-  }
-
-  to {
-    object-position: 50% 75%;
-  }
-}
 $width: 100%;
 $height: 100%;
 $pageColor: white;
@@ -452,33 +443,36 @@ ul {
   &-gallery-open {
     & > div {
       & > .page-content-cover {
-        background: rgba(0,0,0,0.15);
+        //background: rgba(0,0,0,0.15);
         height: calc(100% - 32px);
         //flex: 1;
-        &:hover {
-          background: rgba(0,0,0,0.15) !important;
-        }
-
-        & > .page-content-text {
-          font-size: 1.2em;
-          width: calc(100% - 40px);
-          text-align: left;
-          padding: 2px 10px;
-          box-sizing: border-box;
-          background: rgba(1,1,1,0.25);
-          top: 23px;
-          display: none;
-        }
+        & > .page-content-text {}
 
         & > .page-content-cover-dir {
           pointer-events: all;
         }
       }
 
-
       & > .page-content-desc {
         flex: 0;
         margin: 0;
+      }
+    }
+  }
+
+  &-gallery-opened {
+    & > div {
+      & > .page-content-cover {
+        background: rgba(0,0,0,0.15);
+
+        &:hover {
+          background: rgba(0,0,0,0.05) !important;
+        }
+
+        & .page-content-text {
+          // other part of close animation in js
+          pointer-events: none;
+        }
       }
     }
   }
@@ -525,12 +519,8 @@ ul {
       justify-content: center;
       align-items: center;
       background: rgba(0, 0, 0, 1);
-      transition: opacity 0.25s linear, all 0.75s ease-out;
+      transition: all 0.75s ease-out;
       position: relative;
-
-      &:hover {
-        background: rgba(0, 0, 0, .35);
-      }
 
       &-dir {
         position: absolute;
@@ -554,12 +544,31 @@ ul {
       }
     }
 
-    &-image {
+    &-gallerymask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      overflow: hidden;
       z-index: -1;
+      white-space: nowrap;
+    }
+
+    &-gallery {
+      white-space: nowrap;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      transition: all 0.75s ease-in-out;
+      left: 0;
+    }
+
+    &-image {
       object-fit: cover;
       width: 100%;
       height: 100%;
-      animation: imageMovement 10s cubic-bezier(0.25, 0.00, 0.75, 1.0) infinite alternate;
+      background: black;
     }
 
     &-text {
